# ChessEngine

./: .gitignore  CMakeLists.txt  README.md
MyLib/: CMakeLists.txt
MyLib/include/: bitboard.hpp  chesstate.hpp  console.hpp  const.hpp  engine.hpp  game.hpp  generator.hpp  move.hpp  piece.hpp  position.hpp  saver.hpp  visualization.hpp
MyLib/source/: bitboard.cpp  chesstate.cpp  console.cpp  engine.cpp  game.cpp  generator.cpp  move.cpp  piece.cpp  position.cpp  saver.cpp  visualization.cpp
main/: main.cpp
test/: hello_test.cc
test/bitboard_test/: CMakeLists.txt  bitboard.cc
test/generator_test/: CMakeLists.txt  gen.cc
test/legal_moves/: CMakeLists.txt  legalMoves_.cc
test/move_test/: CMakeLists.txt  move_.cc
test/position_test/: CMakeLists.txt  position_.cc
